# tenx-mcp

./: CLAUDE.md  Cargo.toml  HTTP_TRANSPORT.md  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/tenx-mcp/: Cargo.toml
crates/tenx-mcp/examples/: README.md  README_ghusers.md  basic_client.rs  basic_client_stdio.rs  basic_server.rs  client_with_connection.rs  derive.rs  dynamic_registration.rs  ghusers.rs  http_client.rs  http_debug.rs  http_server.rs  http_server_minimal.rs  oauth_client.rs  process_spawn.rs  register_client.rs  stream_connection.rs  timeout_server.rs  weather_server.rs
crates/tenx-mcp/src/: api.rs  arguments.rs  auth.rs  client.rs  codec.rs  connection.rs  context.rs  error.rs  http.rs  jsonrpc.rs  lib.rs  request_handler.rs  schema.rs  server.rs  testutils.rs  transport.rs
crates/tenx-mcp/src/auth/: dynamic_registration.rs  mod.rs  oauth_client.rs
crates/tenx-mcp/src/schema/: capabilities.rs  completions.rs  content.rs  implementation.rs  initialization.rs  jsonrpc.rs  logging.rs  mod.rs  prompts.rs  requests.rs  resources.rs  roots.rs  sampling.rs  tools.rs  types.rs
crates/tenx-mcp/tests/: bidi.rs  client_connection_test.rs  client_lifecycle_test.rs  client_server_ping.rs  dynamic_registration_test.rs  error_handling_test.rs  http_integration.rs  lifecycle_test.rs  lifecycle_tests.rs  macro_derive.rs  notifications.rs  oauth_test.rs  protocol_compliance.rs  resources_file_test.rs  rmcp_integration.rs  server_to_client_ping_test.rs
examples/: basic_client.rs  basic_client_stdio.rs  basic_server.rs  client_with_connection.rs  connection_server.rs  echo_server.rs  error_handling.rs  migration_guide.md  process_spawn.rs  retry_timeout.rs  stream_connection.rs  tcp_server.rs  timeout_client.rs  timeout_server.rs
proto/: README.md
scripts/: sync_weather_example.py
src/: api.rs  client.rs  client_connection.rs  codec.rs  connection.rs  context.rs  error.rs  jsonrpc.rs  lib.rs  request_handler.rs  retry.rs  schema.rs  server.rs  server_connection.rs  testutils.rs  transport.rs
tests/: bidi.rs  client_connection_test.rs  error_handling_integration.rs  error_handling_test.rs  graceful_shutdown_test.rs  notifications.rs  protocol_compliance.rs  rmcp_integration.rs  server_client_request_example.rs  server_client_request_simple.rs  server_to_client_ping_test.rs
