[package]
name = "tenx-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Complete, ergonomic implementation of the Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/tenxhq/tenx-mcp"
keywords = ["mcp", "ai"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
async-trait = "0.1"
bytes = "1.10"
schemars = "0.9.0"

[dev-dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["client", "server"] }

[[example]]
name = "basic_server"
path = "examples/basic_server.rs"

[[example]]
name = "basic_client"
path = "examples/basic_client.rs"

[[example]]
name = "timeout_server"
path = "examples/timeout_server.rs"

[[example]]
name = "timeout_client"
path = "examples/timeout_client.rs"

[[example]]
name = "tcp_server"
path = "examples/tcp_server.rs"

[[example]]
name = "process_spawn"
path = "examples/process_spawn.rs"

[[example]]
name = "stream_connection"
path = "examples/stream_connection.rs"
