[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Complete, ergonomic implementation of the Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/tenxhq/tenx-mcp"
keywords = ["mcp", "ai", "anthropic","openai"]

[workspace]
resolver = "2"
members = ["crates/*"]

