[package]
name = "macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
proc-macro = true


[dependencies]
heck = "0.5"
proc-macro2 = "1.0.85"
proc-macro2-diagnostics = "0.10.1"
quote = "1.0.36"
structmeta = "0.3.0"
syn = { version = "2.0.66", features = ["full", "extra-traits"] }
thiserror = "2.0.7"

[dev-dependencies]
pretty_assertions = "1.4"
