[package]
name = "tenx-mcp"
version = "0.0.1"
edition = "2021"

[dependencies]
macros = { path = "../macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
async-trait = "0.1"
bytes = "1.10"
schemars = "0.9.0"

[dev-dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["client", "server"] }
