[package]
name = "tenx-mcp"
version = "0.0.1"
edition = "2021"

[dependencies]
macros = { path = "../macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
async-trait = "0.1"
bytes = "1.10"
schemars = "0.9.0"
axum = { version = "0.7", features = ["http2"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
http = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "6.0"
async-stream = "0.3"

[dev-dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = ["client", "server", "transport-worker", "transport-streamable-http-server"] }
